add_executable(debug_cli debug-cli.cpp)
add_executable(debug_game_mode_cli debug_game_mode_cli.cpp)
target_link_libraries(debug_cli PRIVATE ${LIBRARY_NAME})
target_link_libraries(debug_game_mode_cli PRIVATE ${LIBRARY_NAME})
# add_executable(bench_fps benchmarkFPS.cpp)
# target_link_libraries(bench_fps PRIVATE ${LIBRARY_NAME})
# add_executable(bench_camera cameraFPS.cpp)
# target_link_libraries(bench_camera PRIVATE ${LIBRARY_NAME})
# add_executable(bench_lidar lidarFPS.cpp)
# target_link_libraries(bench_lidar PRIVATE ${LIBRARY_NAME})
# add_executable(cameraBenchmark cameraBechmark.cpp)
# target_link_libraries(cameraBenchmark PRIVATE ${LIBRARY_NAME})
# add_executable(lidarBenchmark lidarBechmark.cpp)
# target_link_libraries(lidarBenchmark PRIVATE ${LIBRARY_NAME})

# add_executable(cameraMultiBench cameraMultiBench.cpp)
# target_link_libraries(cameraMultiBench PRIVATE ${LIBRARY_NAME})
