<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_uav_core</name>

  <version>2.0.0</version>
  <description>MRS UAV Core</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>

  <depend>rmw_zenoh_cpp</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_hw_api</depend>
  <depend>mrs_uav_managers</depend>
  <depend>mrs_uav_controllers</depend>
  <depend>mrs_uav_trackers</depend>
  <depend>mrs_uav_state_estimators</depend>
  <depend>mrs_multirotor_simulator</depend>
  <depend>mrs_uav_autostart</depend>
  <depend>mrs_uav_trajectory_generation</depend>
  <depend>mrs_uav_status</depend>
  <depend>mrs_uav_testing</depend>

  <depend>tmux</depend>
  <depend>tmuxinator</depend>

  <depend>mrs-uav-shell-additions</depend>

  <depend>moreutils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
